--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-  <!-- Write your HTML here -->
+<table>
+  <tr>
+    <th>Name</th>
+  </tr>
+  
+  
+</table>
   
 </body>
 </html>
