--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <table>
   <tr>
     <th>Name</th>
+    <th>Phone Number</th>
+    <th>Bringing</th>
+  </tr>
+  <tr>
+    <td>Daniel</td>
+    <td>845-282-4000</td>
+    <td>Guacamole</td>
   </tr>
   
   
