--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <td>Guacamole</td>
   </tr>
   <tr>
-    <td>Rachel</td>
-    <td>718-555-1212</td>
-    <td>Chips</td>
+    <td>New York</td>
+    <td>New York</td>
+    <td>8,622,698</td>
   </tr>
   <tr>
     <td>Terrance</td>
